--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -308,7 +308,66 @@ button{
 
 /* ============== CELERATE ============== */
 
+.celebrate__container{
+  row-gap: 1rem;
+}
+
+.celebrate__data{
+  text-align: center;
+}
+
+.celebrate__title{
+  margin-bottom: var(--mb-1-5);
+}
+
+.celebrate__description{
+  margin-bottom: var(--mb-2-5);
+}
+
+.celebrate__img{
+  width: 280px;
+  justify-self: center;
+}
 /* ============== GIFT ============== */
+
+.gift__container{
+  grid-template-columns: repeat(2, 1fr);
+  gap: 1.5rem;
+}
+
+.gift__card{
+  display: grid;
+  position: relative;
+  background-color: var(--container-color);
+  box-shadow: 0 4px 16px hsla(355, 25%, 15%, .1);
+  padding: 1.5rem 1rem 1rem;
+  border-radius: .75rem;
+}
+
+.gift__img{
+  width: 100px;
+  justify-self: center;
+  margin-bottom: var(--mb-0-25);
+  transition: .3s;
+}
+
+.gift__icon{
+  font-size: 1.25rem;
+  color: var(--first-color);
+  position: absolute;
+  top: 1rem;
+  right: 1rem;
+  cursor: pointer;
+}
+
+.gift__title{
+  font-size: var(--smaller-font-size);
+  font-weight: var(--font-medium);
+}
+
+.gift__card:hover .gift__img{
+  transform: translateY(-.25rem);
+}
 
 /* ============== NEW ============== */
 
