--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -233,6 +233,9 @@ button{
 
 /* Active Link */
 
+.active-link{
+  color: var(--first-color);
+}
 
 /* ============== HOME ============== */
 
@@ -557,5 +560,50 @@ button{
 
 
 /* ============== SCROLL UP ============== */
+.scrollup{
+  position: fixed;
+  right: 1rem;
+  bottom: -30%;
+  background-color: var(--container-color);
+  box-shadow: 0 4px 12px hsla(0, 0%, 20%, .1);
+  display: inline-flex;
+  padding: .35rem;
+  border-radius: .25rem;
+  z-index: var(--z-tooltip);
+  opacity: .8;
+  transition: .4s;
+}
+
+.scrollup__icon{
+  font-size: 1.25rem;
+  color: var(--first-color);
+}
+
+.scrollup:hover{
+  opacity: 1;
+}
 
 /* Mostrar Scroll Up */
+.show-scroll{
+  bottom: 3rem;
+}
+
+
+/* ============== SCROLL BAR ============== */
+::-webkit-scrollbar{
+  width: .6rem;
+  background: hsl(355, 8%, 44%);
+  border-radius: 1rem;
+}
+
+::-webkit-scrollbar-thumb{
+  background: hsl(355, 32%, 17%);
+  border-radius: 1rem;
+}
+
+/* ============== BREAKPOINTS ============== */
+/* Para dispositivos pequenos */
+
+/* Para dispositivos medianos */
+
+/* Para dispositivos grandes */
