--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -78,6 +78,7 @@ body{
   margin: var(--header-height) 0 0 0;
   background-color: var(--body-color);
   color: var(--text-color);
+  transition: .4s; /*Para la animacion del modo oscuro*/
 }
 
 h1, h2, h3, h4{
@@ -105,7 +106,51 @@ button{
 }
 /* ============== THEME ============== */
 
+.nav__btns{
+  display: flex;
+  align-items: center;
+  column-gap: 1rem;
+}
+
+.change-theme{
+  color: var(--title-color);
+  font-size: 1.25rem;
+  cursor: pointer;
+}
 /* ============== Variables Tema Dark ============== */
+
+body.dark-theme{
+  --title-color: hsl(355, 4%, 95%);
+  --text-color: hsl(355, 4%, 75%);
+  --body-color: hsl(355, 20%, 12%);
+  --container-color: hsl(355, 16%, 16%);;
+}
+
+/* Cambios de color en algunas partes en tema oscuro */
+
+.dark-theme .scroll-header, .dark-theme .nav__menu{
+  box-shadow: 0 2px 4px hsla(0, 0%, 4%, .3);
+}
+
+.dark-theme .message__container{
+  background-color: var(--container-color);
+}
+
+.dark-theme .message__input{
+  background-color: var(--body-color);
+}
+
+.dark-theme .message__button{
+  background-color: var(--first-color);
+}
+
+.dark-theme .message__button:hover{
+  background-color: var(--first-color-alt);
+}
+
+.dark-theme::-webkit-scrollbar{
+  background: hsl(355, 8%, 30%);
+}
 
 /* ============== REUSABLE CSS CLASSES ============== */
 .container{
@@ -140,6 +185,7 @@ button{
   top: 0;
   left: 0;
   z-index: var(--z-fixed);
+  transition: .4s; /*Para la animacion del modo oscuro*/
 }
 
 /* ============== NAV ============== */
